src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Partner Portal Lead Process</fullName>
        <description>PRF Partner Portal Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Converted to Opportunity with Event</fullName>
        </values>
        <values>
            <fullName>Converted with Opportunity</fullName>
        </values>
        <values>
            <fullName>Converted without Opportunity</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Converted to Opportunity with Event</fullName>
        </values>
        <values>
            <fullName>Converted with Opportunity</fullName>
        </values>
        <values>
            <fullName>Converted without Opportunity</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Asset_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Partners to assign Leads to JDE Sales Reps</description>
        <label>Assign to JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Being_Converted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Being Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Online_ID__c</fullName>
        <label>Campaign Online ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chamber_of_Commerce_Number__c</fullName>
        <label>Chamber of Commerce Number</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Register_Number__c</fullName>
        <label>Commercial Register Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Competitor)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_Date__c</fullName>
        <label>Consent Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_IP_Address__c</fullName>
        <label>Consent Registration IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_Source_URL__c</fullName>
        <label>Consent Registration Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_Source_URLs__c</fullName>
        <label>Consent Registration Source URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Status_Marketing__c</fullName>
        <label>Consent Status - Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Status_Profiling__c</fullName>
        <label>Consent Status - Profiling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Status_Surveys__c</fullName>
        <label>Consent Status - Surveys</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <label>Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Text_Version__c</fullName>
        <label>Consent Text Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Text__c</fullName>
        <label>Consent Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Texts__c</fullName>
        <label>Consent Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Version_Marketing__c</fullName>
        <label>Consent Version - Marketing</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Version_Profiling__c</fullName>
        <label>Consent Version - Profiling</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Version_Surveys__c</fullName>
        <label>Consent Version - Surveys</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Person_at_Indirect_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person at Indirect Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Date__c</fullName>
        <description>Date until when to convert the Lead</description>
        <label>Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Days__c</fullName>
        <formula>Conversion_Date__c -  DATEVALUE(CreatedDate)</formula>
        <label>Conversion Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Account__c</fullName>
        <formula>HYPERLINK( ConvertedAccountId ,  ConvertedAccountId , &quot;_blank&quot;)</formula>
        <label>Converted Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Contact__c</fullName>
        <formula>HYPERLINK(  ConvertedContactId  , ConvertedContactId , &quot;_blank&quot;)</formula>
        <label>Converted Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Opportunity__c</fullName>
        <formula>HYPERLINK( ConvertedOpportunityId , ConvertedOpportunityId, &quot;_blank&quot;)</formula>
        <label>Converted Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cookie__c</fullName>
        <label>Cookie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creditworthiness_Flag_Code__c</fullName>
        <label>Creditworthiness Flag Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditworthiness_Flag_Validation_Date__c</fullName>
        <label>Creditworthiness Flag Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creditworthiness_Flag__c</fullName>
        <label>Creditworthiness Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credtiworthiness_Flag_Validation_Date__c</fullName>
        <label>Credtiworthiness Flag Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Brewing_System__c</fullName>
        <label>Current Brewing System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
                <value>
                    <fullName>Roast</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Supplier_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Supplier/Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Current Supplier/Competitor)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Idle__c</fullName>
        <formula>DATEVALUE(NOW()) -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Idle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_Call__c</fullName>
        <label>Do not Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason__c</fullName>
        <description>If a Duplicate is created a reason must be added</description>
        <inlineHelpText>Add a reason for creating a duplicate record</inlineHelpText>
        <label>Duplicate Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office building</fullName>
                </value>
                <value>
                    <fullName>Existing address is bankrupt</fullName>
                </value>
                <value>
                    <fullName>Same address for invoicing purposes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicated_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User must add a reason if there is a duplicate created or a record is updates in Salesforce.</description>
        <inlineHelpText>Please add the reason why you have changed this record</inlineHelpText>
        <label>Duplicated Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailLookup__c</fullName>
        <externalId>true</externalId>
        <label>EmailLookup</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_SHA256__c</fullName>
        <label>Email SHA256</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Current_Supplier_Competi__c</fullName>
        <label>Expiration Date Current Supplier/Competi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer All</fullName>
                </value>
                <value>
                    <fullName>Buyer Ingredients</fullName>
                </value>
                <value>
                    <fullName>Buyer Machines</fullName>
                </value>
                <value>
                    <fullName>Service Contact</fullName>
                </value>
                <value>
                    <fullName>Payment Responsible</fullName>
                </value>
                <value>
                    <fullName>Invoices Responsible</fullName>
                </value>
                <value>
                    <fullName>Digital Invoices Responsible</fullName>
                </value>
                <value>
                    <fullName>Catering Responsible</fullName>
                </value>
                <value>
                    <fullName>Goods Recipient Contact</fullName>
                </value>
                <value>
                    <fullName>Administrative Contact</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                    <isActive>false</isActive>
                    <label>Administrator</label>
                </value>
                <value>
                    <fullName>Charges Responsible</fullName>
                    <isActive>false</isActive>
                    <label>Charges Responsible</label>
                </value>
                <value>
                    <fullName>Coach</fullName>
                    <isActive>false</isActive>
                    <label>Coach</label>
                </value>
                <value>
                    <fullName>Fin. Acc. Manager</fullName>
                    <isActive>false</isActive>
                    <label>Fin. Acc. Manager</label>
                </value>
                <value>
                    <fullName>Head of Canteen</fullName>
                    <isActive>false</isActive>
                    <label>Head of Canteen</label>
                </value>
                <value>
                    <fullName>Head of Personnel</fullName>
                    <isActive>false</isActive>
                    <label>Head of Personnel</label>
                </value>
                <value>
                    <fullName>Head of Purchasing</fullName>
                    <isActive>false</isActive>
                    <label>Head of Purchasing</label>
                </value>
                <value>
                    <fullName>Head of Sales</fullName>
                    <isActive>false</isActive>
                    <label>Head of Sales</label>
                </value>
                <value>
                    <fullName>Head of Section</fullName>
                    <isActive>false</isActive>
                    <label>Head of Section</label>
                </value>
                <value>
                    <fullName>Janitor</fullName>
                    <isActive>false</isActive>
                    <label>Janitor</label>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                    <isActive>false</isActive>
                    <label>Marketing Manager</label>
                </value>
                <value>
                    <fullName>Merchandise Recept.</fullName>
                    <isActive>false</isActive>
                    <label>Merchandise Recept.</label>
                </value>
                <value>
                    <fullName>Purchasing Responsible</fullName>
                    <isActive>false</isActive>
                    <label>Purchasing Responsible</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_To_Market__c</fullName>
        <label>Go-To-Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>Latitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <displayFormat>LE{0000000000}</displayFormat>
        <label>Lead ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>Longitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_City__c</fullName>
        <label>Main City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Country__c</fullName>
        <label>Main Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_House_Number__c</fullName>
        <label>Main House Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Postal_Code__c</fullName>
        <label>Main Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_State__c</fullName>
        <label>Main State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Street__c</fullName>
        <label>Main Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Cluster__c</fullName>
        <label>Need Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Occasion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Scheduled coffee moment</fullName>
                </value>
                <value>
                    <fullName>2. Coffee break on the go</fullName>
                </value>
                <value>
                    <fullName>3. Effective Working Time</fullName>
                </value>
                <value>
                    <fullName>4. Convenience /Quality in-room</fullName>
                </value>
                <value>
                    <fullName>5. Comfortable waiting time</fullName>
                </value>
                <value>
                    <fullName>6. Social/connecting break</fullName>
                </value>
                <value>
                    <fullName>7. Indulging coffee moment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewsLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News Letter Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Employees__c</fullName>
        <label>No.Of Employees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obligation_Expiration_Date__c</fullName>
        <label>Obligation Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working Space</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>In meeting room</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Reception/Lobby</fullName>
                </value>
                <value>
                    <fullName>Cosy corner, staff</fullName>
                </value>
                <value>
                    <fullName>Food Court</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Production Environment</fullName>
                </value>
                <value>
                    <fullName>In-room (care)</fullName>
                </value>
                <value>
                    <fullName>In-room (cure)</fullName>
                </value>
                <value>
                    <fullName>Teachers room</fullName>
                </value>
                <value>
                    <fullName>In-room</fullName>
                </value>
                <value>
                    <fullName>Sport canteen</fullName>
                </value>
                <value>
                    <fullName>Coffee corner/kitchen</fullName>
                </value>
                <value>
                    <fullName>Small Bar/Cafe</fullName>
                </value>
                <value>
                    <fullName>Coffee corner (+ patients + staff + guest)</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Hairdresser</fullName>
                </value>
                <value>
                    <fullName>Cosy Corner</fullName>
                </value>
                <value>
                    <fullName>Waiting Area</fullName>
                </value>
                <value>
                    <fullName>Campus Cafe</fullName>
                </value>
                <value>
                    <fullName>Back-of-house</fullName>
                </value>
                <value>
                    <fullName>Cafetaria/Canteen</fullName>
                </value>
                <value>
                    <fullName>Grand cafetaria</fullName>
                </value>
                <value>
                    <fullName>Canteen</fullName>
                </value>
                <value>
                    <fullName>Breakout</fullName>
                </value>
                <value>
                    <fullName>To Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Expiration</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Ingredient Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_Email_Send_Date__c</fullName>
        <label>Opt-in Email Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opt_in_Source__c</fullName>
        <label>Opt-in Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_URL__c</fullName>
        <label>Opt-in URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_out_URL__c</fullName>
        <label>Opt-out URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Score__c</fullName>
        <label>Priority Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Version__c</fullName>
        <label>Privacy Policy Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotions Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason1__c</fullName>
        <label>Reason1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason2__c</fullName>
        <label>Reason2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Disqualified__c</fullName>
        <label>Reason Disqualified</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Company too small</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Active Customer</fullName>
                </value>
                <value>
                    <fullName>Company not active</fullName>
                </value>
                <value>
                    <fullName>Incomplete data</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>Spam/No interest</fullName>
                </value>
                <value>
                    <fullName>Fails Creditcheck</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Indirect customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Rejected_by_Sales__c</fullName>
        <label>Reason Rejected by Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead not Interested</fullName>
                </value>
                <value>
                    <fullName>Lead not responding</fullName>
                </value>
                <value>
                    <fullName>Long Idle Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>